# miracle-client

./: .gitignore  CLAUDE.md  README.md  README_OLD.md  claude.bat  extglob.FullName  invert-icons.ps1  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  session-state.md
backend/: .env.example  Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: main.rs
backend/src/models/: mod.rs
backend/src/routes/: auth.rs  cosmetics.rs  friends.rs  mod.rs  updates.rs  users.rs
backend/src/services/: jwt.rs  mod.rs
docs/: 1.21.11-api-research.md
infra/: docker-compose.yml
launcher/: dev.bat  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
launcher/src/: App.tsx
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: main.json
launcher/src-tauri/src/: lib.rs  main.rs  supabase.rs
launcher/src-tauri/src/auth/: mod.rs
launcher/src-tauri/src/clips/: mod.rs
launcher/src-tauri/src/ipc/: check_mod_compatibility.rs  curseforge.rs  dependency_resolver.rs  mod.rs  mod_logging_patch.txt  mod_updates.rs  modpack.rs  modrinth.rs
launcher/src-tauri/src/minecraft/: mod.rs
launcher/src-tauri/src/profiles/: mod.rs
launcher/src-tauri/src/updater/: mod.rs
launcher/src/components/: CinematicBackground.tsx  ClipModal.tsx  ClipsCarousel.tsx  ContentCard.tsx  IncompatibleModsModal.tsx  InstalledModsModal.tsx  Layout.tsx  ModDetailsModal.tsx  NewsManagementModal.tsx  PlayerHead.tsx  ProfileManagementModal.tsx  ProfileSelector.tsx  Titlebar.tsx  Toast.tsx  ToastContainer.tsx
launcher/src/lib/: windowState.ts
launcher/src/pages/: Clips.tsx  ContentBrowser.tsx  Friends.tsx  Home.tsx  Login.tsx  News.tsx  OwnerControls.tsx  Profiles.tsx  Profiles_modal_fix.patch  (+1 more)
mod/: MOD_BACKUP.md  build-all-versions.sh  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts  stonecutter.gradle.kts
research/: Fabric-Mixin-Screen-Rendering-Guide.md
scripts/: build-launcher.bat  build-mod.bat  clean.bat  curseforge-ids.json  dev.bat  fetch-curseforge-ids.js  start-dev.bat  supabase-schema.sql
(+103 files in other folders)
